<resources>
    <string name="app_name">misConciertos</string>
    <string name="titulo">Ingrese Datos Del Concierto</string>
    <string name="registrar">Registrar</string>
    <string name="nombre_de_artista">Nombre Artista</string>
    <string name="valor_de_entrada">Valor Entrada</string>
    <string name="genero_musical">Genero Musical</string>
    <string name="fecha">Fecha</string>
    <string name="calificacion">Calificacion</string>
    <string name="ingrese_nombre1">ingrese nombre</string>
    <string name="ingrese_valor1">ingrese valor</string>
    <string-array name="genero_musical">
        <item>Rock</item>
        <item>Jazz</item>
        <item>Pop</item>
        <item>Reguetoon</item>
        <item>Salsa</item>
        <item>Metal</item>
    </string-array>
    <string-array name="calificacion">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>