<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    //titulo de la app
    <TextView
        android:text="@string/titulo"
        android:textSize="@dimen/letraTitulo"
        android:textAllCaps="false"
        android:textColor="@color/colorRojo"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
    //nombre artista
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nombre_de_artista"
            android:textSize="@dimen/letraBase"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/nombreArtistaTxt"
            android:textSize="@dimen/letraBase"
            android:inputType="text"
            android:hint="@string/ingrese_nombre1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    //fecha de evento
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/fechaEventoBtn"
            android:background="@color/colorRosa"
            android:text="@string/fecha"
            android:textSize="@dimen/letraBoton"
            android:textAllCaps="false"
            android:textColor="@color/primary_light"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>
        <EditText
            android:id="@+id/resultadoFechaTxt"
            android:textSize="@dimen/letraBase"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    //genero musical
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/genero_musical"
            android:textSize="@dimen/letraBase"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <Spinner
            android:id="@+id/generoSpi"
            android:gravity="center"
            android:entries="@array/genero_musical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    //valor entrada
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/valor_de_entrada"
            android:textSize="@dimen/letraBase"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/valorEntradaTxt"
            android:inputType="number"
            android:hint="@string/ingrese_valor1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    //calificacion
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/calificacion"
            android:textSize="@dimen/letraBase"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <Spinner
            android:id="@+id/calificacionSpi"
            android:gravity="center"
            android:entries="@array/calificacion"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    //boton registrar
    <Button
        android:id="@+id/registrarBtn"
        android:background="@color/colorAzul"
        android:text="@string/registrar"
        android:textSize="@dimen/letraBoton"
        android:textAllCaps="false"
        android:textColor="@color/primary_light"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>
    //listView
    <ListView
        android:id="@+id/conciertosLv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>